Fixed alignment of email reader panels so they stay at the top.

--- a/style.css
+++ b/style.css
@@ -12,9 +12,16 @@
       width: 100%;
       padding:20px;
     }
+    
+    div {
+      border: 1px solid red;
+      padding: 5px;
+    }
 
     .email-browser {
       display: flex;
+      flex-direction: row;
+      align-content: flex-start;
     }
 
     .navigation {
@@ -30,11 +37,20 @@
 
     .reader {
       flex: 1;
-      justify-content: center;
-      align-items: center;
+      justify-content: top;
+      align-content: flex-start;
       display: flex;
       flex-direction: column;
-      display: flex;
+    }
+
+    .email-header {
+      margin: 50px;
+      flex-direction: column;
+    }
+
+    .email-body {
+      margin: 50px;
+      flex-direction: column;
     }
 
     input.search {
